# mnist-svm

./: .gitmodules  CMakeLists.txt  README.md  evaluation.py  gen_input.sh  run.sh
src/: FeatureExtractor.h  InputFileEntry.h  Svm.cpp  Svm.h  common.h  main.cpp
